feat: endpoint POST - /v1/users created, with resquestDTO in and out, custom exception handler provisioned