@@ -8,7 +8,6 @@ import com.usermanagement.user.repositories.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 
 import java.time.LocalDate;
 import java.util.Arrays;
@@ -22,22 +21,25 @@ public class Instantiation implements CommandLineRunner {
     private final UserRepository userRepository;
     private final RoleRepository roleRepository;
 
-
     @Override
     public void run(String... args) throws Exception {
+        if (roleRepository.count() == 0) {
+            Role adm = new Role(UUID.randomUUID(), UserRolesEnum.ADM_USER, null);
+            Role common = new Role(UUID.randomUUID(), UserRolesEnum.COMMON_USER, null);
+            roleRepository.saveAll(Arrays.asList(adm, common));
+        }
+
         userRepository.deleteAll();
-        roleRepository.deleteAll();
 
-        Role adm = new Role(UUID.randomUUID(), UserRolesEnum.ADM_USER, null);
-        Role common = new Role(UUID.randomUUID(), UserRolesEnum.COMMON_USER, null);
+        Role admRole = roleRepository.findByTypeRole(UserRolesEnum.ADM_USER)
+        .orElseThrow(() -> new RuntimeException("Role ADM_USER not found"));
 
-        roleRepository.save(adm);
-        roleRepository.save(common);
+        Role commonRole = roleRepository.findByTypeRole(UserRolesEnum.COMMON_USER)
+        .orElseThrow(() -> new RuntimeException("Role COMMON_USER not found"));
 
-        List<Role> rolesUser1 = Arrays.asList(adm, common);
-        List<Role> rolesUser2 = List.of(common);
+        List<Role> rolesUser1 = Arrays.asList(admRole, commonRole);
+        List<Role> rolesUser2 = List.of(commonRole);
 
-        String passwordEncrypted = new BCryptPasswordEncoder().encode("12345678");
         User user1 = User.builder()
         .id(UUID.randomUUID())
         .firstName("Ronaldo")
@@ -45,12 +47,11 @@ public class Instantiation implements CommandLineRunner {
         .cpf("123.456.788-90")
         .date(LocalDate.now())
         .email("Rsilva@email.com")
-        .password(passwordEncrypted)
+        .password("passwordEncrypted")
         .active(true)
         .roles(rolesUser1)
         .build();
 
-        String passwordEncrypted2 = new BCryptPasswordEncoder().encode("12345678");
         User user2 = User.builder()
         .id(UUID.randomUUID())
         .firstName("Silvana")
@@ -58,7 +59,7 @@ public class Instantiation implements CommandLineRunner {
         .cpf("111.222.787-90")
         .date(LocalDate.now())
         .email("silvana@email.com")
-        .password(passwordEncrypted2)
+        .password("passwordEncrypted2")
         .active(true)
         .roles(rolesUser2)
         .build();
